--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div>
 	<app-header></app-header>
 
-	<router-outlet></router-outlet>
+	<router-outlet (deactivate)="onDeactivate()"></router-outlet>
 
 
 	<app-footer></app-footer>
