--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -144,3 +144,11 @@
         bottom: 0;
     }
 }
+@media only screen and (min-width: 768px) and (max-width: 1366px) {
+    .banner-img{
+        height: 400px;
+    }
+    .main-banner img{
+        height: 350px;
+    }
+}
