--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <div>
+	<a href="https://api.whatsapp.com/send/?phone=917013132531&text&type=phone_number&app_absent=0" target="blank" class="whatsappImg">
+		<img src="assets/img/whatsapp-svg.svg">
+	</a>
 	<app-header></app-header>
 
 	<router-outlet (deactivate)="onDeactivate()"></router-outlet>
