--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -8,13 +8,13 @@
 		<h4>About</h4>
 		<ul>
 			<li>
-				<a [routerLink]="['/']">Frequent Questions</a>
+				<a [routerLink]="['/faq']">Frequent Questions</a>
 			</li>
 			<li>
 				<a [routerLink]="['/']">Careers</a>
 			</li>
 			<li>
-				<a [routerLink]="['/']">Shipping</a>
+				<a [routerLink]="['/shipping-policy']">Shipping</a>
 			</li>
 		</ul>
 	</div>
@@ -36,17 +36,17 @@
 		<h4>Contact Us</h4>
 		<ul>
 			<li>
-				<a [routerLink]="['/']">Chat with us</a>
+				<a href="https://api.whatsapp.com/send/?phone=917013132531&text&type=phone_number&app_absent=0" target="blank" target="blank">Chat with us</a>
 			</li>
 			<li>
-				<a [routerLink]="['/']">Privacy Policy</a>
+				<a [routerLink]="['/privacy-policy']">Privacy Policy</a>
 			</li>
 			<li>
-				<a [routerLink]="['/']">Terms & Conditions</a>
+				<a [routerLink]="['/terms-conditions']">Terms & Conditions</a>
 			</li>
 		</ul>
 	</div>
 </div>
 <div class="text-center copy-right">
-	<div>© Copyright 2022 Happy Frames</div>
+	<div>© Copyright 2022 The Happy Frames</div>
 </div>
