--- a/src/app/upload-images/upload-images.component.html
+++ b/src/app/upload-images/upload-images.component.html
@@ -243,10 +243,10 @@
 			      		<div class="col-lg-12">
 			      			<div class="form-group form-mar">
 							    <label for="address2">Address 2</label>
-							    <input type="text" class="form-control" placeholder="Apt/Suite/Unit (Optional)" formControlName="address2">
-							    <div *ngIf="submitted && f.address2.errors" class="invalid-feedback">
+							    <input type="text" class="form-control" placeholder="Apt/Suite/Unit (Optional)">
+							    <!-- <div *ngIf="submitted && f.address2.errors" class="invalid-feedback">
 							        <div *ngIf="f.address2.errors.required">Address 2 is required</div>
-						      	</div>
+						      	</div> -->
 						  	</div>
 			      		</div>
 			      	</div>
