--- a/src/app/my-orders/my-orders.component.css
+++ b/src/app/my-orders/my-orders.component.css
@@ -40,6 +40,15 @@
 .odd{
     display: none;
 }
+.loader {
+border: 6px solid #ffcc05;
+    border-radius: 50%;
+    border-top: 6px solid #000;
+    width: 50px;
+    height: 50px;
+    animation: spin 2s linear infinite;
+    margin: auto;
+}
 
 @media only screen and (min-width: 320px) and (max-width: 768px) {
 	.order-table{
@@ -51,4 +60,14 @@
 	.dataTables_length, #example_filter, .dataTables_info{
 		text-align: left !important;
 	}
+}
+/* Safari */
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
