--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -56,7 +56,7 @@
 				<a (click)="openUploadImg()" style="cursor: pointer;">Frame your Photo</a>
 			</li>
 			<li (click)="openMenu()">
-				<a [routerLink]="['/']">FAQ's</a>
+				<a [routerLink]="['/faq']">FAQ's</a>
 			</li>
 			<li (click)="openMenu()">
 				<a [routerLink]="['/']">Contact Us</a>
