--- a/src/styles.css
+++ b/src/styles.css
@@ -32,3 +32,11 @@
     text-align: center;
     z-index: 999;
 }
+@media only screen and (min-width: 320px) and (max-width: 768px) {
+    .cont{
+       padding: 20px !important;
+    }
+    .para{
+        font-size: 12px !important;
+    }
+}
