--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -2,6 +2,7 @@
     background-color: #000;
     margin: 0px;
     padding: 20px 70px;
+    border-bottom: 1px solid #999;
 }
 .header-logo img{
 	height: 60px;
