--- a/src/app/my-orders/my-orders.component.html
+++ b/src/app/my-orders/my-orders.component.html
@@ -23,7 +23,7 @@
                 </td>
                 <td>{{myOrder.tile}}</td>
             </tr>
-            <tr *ngIf="!noData">
+            <tr *ngIf="loaderData">
             	<td valign="top" colspan="6">
             		<div class="loader"></div>
             	</td>
