--- a/src/app/privacy-policy/privacy-policy.component.html
+++ b/src/app/privacy-policy/privacy-policy.component.html
@@ -1,4 +1,5 @@
 <div class="cont">
+	<div>
 	<p class="para">
 		This Privacy Policy describes how we – Pearl Venture and our affiliated companies (“Happy Frames”, “we”, “our” or “us”) – collect, store, use and disclose personal data regarding individuals (“User(s)” or “you”) who:<br/>
 
@@ -126,4 +127,5 @@ Questions, Concerns or Complaints: If you have any comments or questions about t
 
 Effective Date: July 21, 2022
 	</p>
+</div>
 </div>
