--- a/src/app/shipping-policy/shipping-policy.component.html
+++ b/src/app/shipping-policy/shipping-policy.component.html
@@ -1,10 +1,11 @@
 <div class="cont">
+	<div>
 	<h5>ORDER CONFIRMATION:</h5>
-	<p class="para">After placing your order, HAPPY FRAMES team will contact you within 1 working day to provide you
+	<p class="para">After placing your order, THE HAPPY FRAMES team will contact you within 1 working day to provide you
 	a preview and make any changes that you would like to the images or frames.</p>
 	<h5>DISPATCH:</h5>
 	<p class="para">Dispatch of items is done within 2-3 working days from the order, depending on the customer
-	response time during the ‘Order Confirmation’ stage. HAPPY FRAMES team will try to do their best
+	response time during the ‘Order Confirmation’ stage. THE HAPPY FRAMES team will try to do their best
 	to dispatch on the same day, if not, the next working day.
 	If items are out of stock/require replenishment or if there is a technical error, our team will reach
 	out to you and dispatch may take an extra few day.</p>
@@ -12,9 +13,9 @@
 	<p class="para">Based on typical times, the estimates are:
 	Metro Cities: 3-6 Days*
 	Other Cities: 4-12 Days*
-	*Mentioned times are typical delivery windows based on statistical data, neither HAPPY FRAMES nor
+	*Mentioned times are typical delivery windows based on statistical data, neither THE HAPPY FRAMES nor
 	our delivery partners guarantee exact delivery windows or dates. Delivery timings may vary during
-	holidays, festival seasons or lockdown protocols. HAPPY FRAMES is not liable for any network or
+	holidays, festival seasons or lockdown protocols. THE HAPPY FRAMES is not liable for any network or
 	routing delays.
 	Once your order has been dispatched, you will receive an SMS and WhatsApp message with your
 	tracking details provided you have given the correct details during checkout. In case you do not
@@ -25,6 +26,7 @@
 	We accept pre-paid payments such as Wallets/UPI, Card Payments, Net Banking &amp; More on
 	checkout.</p>
 	<h5>RETURNS:</h5>
-	<p class="para">Returns are not eligible on HAPPY FRAMES unless the issue is as mentioned in the Terms &amp;
+	<p class="para">Returns are not eligible on THE HAPPY FRAMES unless the issue is as mentioned in the Terms &amp;
 	Conditions. This is mainly due to the frames being a custom product.</p>
+</div>
 </div>
