--- a/src/app/terms-conditions/terms-conditions.component.html
+++ b/src/app/terms-conditions/terms-conditions.component.html
@@ -1,4 +1,5 @@
 <div class="cont">
+	<div>
 	<p class="para">
 		Dear Visitor/User, <br/>
 
@@ -209,4 +210,5 @@ Any inconsistency between these Terms of Service in English and these Terms of S
 
 The failure to enforce or the waiver by either party of a default or breach of the other party shall not be considered to be a waiver of any prior, subsequent or other default or breach<br/>
 	</p>
+	<div>
 </div>
