--- a/src/app/faq/faq.component.css
+++ b/src/app/faq/faq.component.css
@@ -2,14 +2,18 @@
 	background-color: #000;
 	padding: 80px;
 }
+.cont div{
+    margin: auto;
+    display: table;
+}
 .faq-q{
 	font-size: 16px;
-    color: #fff;
+    color: #ffcc05;
     letter-spacing: 1px;
 }
 .faq-a{
     font-size: 14px;
-    color: #ffcc05;
+    color: #fff;
     letter-spacing: 1px;
     padding-left: 15px;
     margin-bottom: 30px;
