--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -1,4 +1,5 @@
 <div class="cont">
+	<div>
 	<p class="faq-q">1. What is the size of the frame?</p>
 	<p class="faq-a">The existing frame size is 8x8 inch. More sizes will be added soon.</p>
 	<p class="faq-q">2. What is the price of each frame?</p>
@@ -23,4 +24,5 @@
 	place already?</p>
 	<p class="faq-a">No, as this product is customized, cash on delivery/cancellations once
 	the product is ordered is not an option.</p>
+	</div>
 </div>
