--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -2,6 +2,7 @@
 	background-color: #000;
 	margin:0px;
     padding: 70px;
+    border-top: 1px solid #999;
 }
 .footer-logo a img{
 	height: 100px;
