--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -18,7 +18,7 @@
 						<a [routerLink]="['/faq']">FAQ's</a>
 					</li>
 					<li>
-						<a [routerLink]="['/']">Contact Us</a>
+						<a href="mailto:help@thehappyframes.com">Contact Us</a>
 					</li>
 					<div style="clear:both;"></div>
 				</ul>
@@ -35,7 +35,7 @@
 			<img src="assets/img/user.png" class="user-icon" (click)="openDP()">
 			<div class="userDP openDropdown">
 				<ul (click)="openDP()">
-					<li [routerLink]="['/my-orders']">My Orders</li>
+					<li [routerLink]="['/my-orders']" style="margin-top: 10px;">My Orders</li>
 					<li (click)="logOutApp()">Log Out</li>
 				</ul>
 			</div>
@@ -59,7 +59,7 @@
 				<a [routerLink]="['/faq']">FAQ's</a>
 			</li>
 			<li (click)="openMenu()">
-				<a [routerLink]="['/']">Contact Us</a>
+				<a href="mailto:help@thehappyframes.com">Contact Us</a>
 			</li>
 			<div style="clear:both;"></div>
 		</ul>
