--- a/src/app/shipping-policy/shipping-policy.component.css
+++ b/src/app/shipping-policy/shipping-policy.component.css
@@ -2,6 +2,10 @@
 	background-color: #000;
 	padding: 80px;
 }
+.cont div{
+    margin: auto;
+    display: table;
+}
 h5{
     color: #ffcc05;
     font-size: 16px;
