changes for upload images

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -17,9 +17,9 @@
 					<li>
 						<a [routerLink]="['/faq']">FAQ's</a>
 					</li>
-					<li>
+					<!-- <li>
 						<a href="mailto:help@thehappyframes.com">Contact Us</a>
-					</li>
+					</li> -->
 					<div style="clear:both;"></div>
 				</ul>
 				<div style="clear: both;"></div>
@@ -58,9 +58,9 @@
 			<li (click)="openMenu()">
 				<a [routerLink]="['/faq']">FAQ's</a>
 			</li>
-			<li (click)="openMenu()">
+			<!-- <li (click)="openMenu()">
 				<a href="mailto:help@thehappyframes.com">Contact Us</a>
-			</li>
+			</li> -->
 			<div style="clear:both;"></div>
 		</ul>
 	</div>
