--- a/src/app/privacy-policy/privacy-policy.component.html
+++ b/src/app/privacy-policy/privacy-policy.component.html
@@ -1,7 +1,7 @@
 <div class="cont">
 	<div>
 	<p class="para">
-		This Privacy Policy describes how we – Pearl Venture and our affiliated companies (“Happy Frames”, “we”, “our” or “us”) – collect, store, use and disclose personal data regarding individuals (“User(s)” or “you”) who:<br/>
+		This Privacy Policy describes how we – Pearl Venture and our affiliated companies (“The Happy Frames”, “we”, “our” or “us”) – collect, store, use and disclose personal data regarding individuals (“User(s)” or “you”) who:<br/>
 
 visit, use or otherwise interact with our website, available at thehappyframes.com, or any other website, webpage, e-mail, text message or online ad under our control (collectively - “Sites”); <br/>
 participate in our Referral Program, as described in the Referral Terms ("Referral Program"); and/or
