--- a/src/app/payment-status/payment-status.component.css
+++ b/src/app/payment-status/payment-status.component.css
@@ -38,3 +38,11 @@
   text-align: center;
   cursor: pointer;
 }
+@media only screen and (min-width: 320px) and (max-width: 768px) {
+  .we-recived {
+    width: auto;
+  }
+  .card {
+    margin: 0px auto;
+  }
+}
