--- a/src/app/my-orders/my-orders.component.html
+++ b/src/app/my-orders/my-orders.component.html
@@ -1,27 +1,31 @@
 <div style="padding: 50px 80px;" class="table-responsive order-table">
-	<table id="myorders" class="table table-striped table-bordered">
+	<table id="myorders" class="table table-striped table-bordered" *ngIf="staff">
         <thead>
             <tr>
-                <th>Full Name</th>
-                <th>Order Total</th>
-                <th>Order Status</th>
-                <th>Ordered Date</th>
-                <th>Ordered Photos</th>
+                <th>Order ID</th>
+                <th>Name</th>
+                <th>Phone No</th>
+                <th>Date</th>
+                <th>Amount</th>
+                <th>Photos</th>
                 <th>Ordered Tile</th>
+                <th>Order status</th>
             </tr>
         </thead>
         <tbody>
             <tr *ngFor="let myOrder of myOrders">
+                <td>{{myOrder.order_id}}</td>
                 <td>{{myOrder.full_name}}</td>
-                <td>INR :{{myOrder.order_total}}</td>
-                <td>{{myOrder.order_status}}</td>
+                <td>{{myOrder.phone}}</td>
                 <td>{{myOrder.ordered_date}}</td>
+                <td>INR :{{myOrder.order_total}}</td>
                 <td>
-                	<div *ngFor="let imgPath of myOrder.photos" class="pull-left" style="margin-left:5px;margin-bottom: 5px;">
-                		<img src="{{ imgPath }}" style="height: 50px;width:50px;">
-                	</div>
+                    <div *ngFor="let imgPath of myOrder.photos" class="pull-left" style="margin-left:5px;margin-bottom: 5px;">
+                        <img src="{{ imgPath }}" style="height: 50px;width:50px;">
+                    </div>
                 </td>
                 <td>{{myOrder.tile}}</td>
+                <td>{{myOrder.order_status}}</td>                
             </tr>
             <tr *ngIf="loaderData">
             	<td valign="top" colspan="6">
@@ -33,5 +37,46 @@
             </tr>
         </tbody>
     </table>
-
+    <table id="myorders" class="table table-striped table-bordered" *ngIf="!staff">
+        <thead>
+            <tr>
+                <th>Order ID</th>
+                <th>Date</th>
+                <th>Total Amount</th>
+                <th>Photos</th>
+                <th>Ordered Tile</th>
+                <th>Order status</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let myOrder of myOrders">
+                <td>{{myOrder.order_id}}</td>
+                <td>{{myOrder.ordered_date}}</td>
+                <td>INR :{{myOrder.order_total}}</td>
+                <td>
+                    <div *ngFor="let imgPath of myOrder.photos" class="pull-left" style="margin-left:5px;margin-bottom: 5px;">
+                        <img src="{{ imgPath }}" style="height: 50px;width:50px;">
+                    </div>
+                </td>
+                <td>{{myOrder.tile}}</td>
+                <td>{{myOrder.order_status}}</td>                
+            </tr>
+            <tr *ngIf="loaderData">
+                <td valign="top" colspan="6">
+                    <div class="loader"></div>
+                </td>
+            </tr>
+            <tr class="nodata" *ngIf="noData">
+                <td valign="top" colspan="6" class="dataTables_empty">No data available in table</td>
+            </tr>
+        </tbody>
+    </table>
+    <div class="pagination" *ngIf="myOrders.length != 0 && staff">
+        <p>Total Records: {{ count }}</p>
+      <a (click)="stepBack()" *ngIf="paginationNumber != 1">❮</a>
+      <a class="disabled" *ngIf="paginationNumber === 1">❮</a>
+      <a>{{ paginationNumber }}</a>
+      <a (click)="stepFor()" *ngIf="num_pages != paginationNumber">❯</a>
+      <a class="disabled" *ngIf="num_pages === paginationNumber">❯</a>
+    </div>
 </div>
