--- a/src/app/payment-status/payment-status.component.html
+++ b/src/app/payment-status/payment-status.component.html
@@ -3,7 +3,7 @@
 	<div style="border-radius:200px; height:200px; width:200px; background: #F8FAF5; margin:0 auto;">
 		<i class="checkmark">✓</i>
 	</div>
-	<h1 class="success text-center">Success</h1> 
+	<h1 class="success text-center">Payment Processing!</h1> 
 	<p class="we-recived text-center">We received your purchase request;<br/> we'll be in touch shortly!</p>
 	<p style="margin-bottom: 20px;" class="golink">Go to <a [routerLink]="['/']">Dashboard</a> or <a [routerLink]="['/my-orders']">My orders</a></p>
 </div>
